# Dotfiles

./: .gitignore  README.md
bash/: .bashrc
i3/.config/i3/: config_regolith  requirements.txt
lunar-nvim/.config/nvim/: init.lua  lv-config.lua
lunar-nvim/.config/nvim/UltiSnips/: tex.snippets
lunar-nvim/.config/nvim/ftplugin/: tex.lua
lunar-nvim/.config/nvim/lua/: keymappings.lua  plugins.lua  settings.lua
lunar-nvim/.config/nvim/lua/core/: compe.lua  dashboard.lua
lunar-nvim/.config/nvim/plugin/: packer_compiled.lua
lvim/.config/lvim/: config.lua
lvim/.config/lvim/plugin/: packer_compiled.lua
nvim/.config/nvim/: plugins.vim  tex.snippets
nvim/.config/nvim/UltiSnips/: tex.snippets
programs/: fedora.txt  install.sh  pkglist_arch.txt
screen/: .screenrc
templates/templates/: CMakeLists.txt
texmf/texmf/tex/latex/: README.md
tmux/: .tmux.conf
vim/: .vimrc
vim/.vim/UltiSnips/: tex.snippets
